<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/OutputBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|start"
        android:hint="@string/hint_text_of_output_box"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:inputType="textUri"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/OpenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_of_open_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/SerialPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_of_serial_port_box"
        android:text="ttyHSL0"
        android:inputType="textUri"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/BaudRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_of_baud_rate_box"
        android:text="115200"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SerialPort" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/InputBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_of_input_box"
        android:singleLine="true"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/SendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_of_send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <CheckBox
        android:id="@+id/LoopBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_of_loop_checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>